# ffxiv-crafting-solver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
ffxiv-crafting/: Cargo.toml  README.md
ffxiv-crafting/ffxiv-crafting-derive/: Cargo.toml  README.md
ffxiv-crafting/ffxiv-crafting-derive/src/: actions.rs  buff.rs  condition.rs  lib.rs  passthrough.rs
ffxiv-crafting/src/: conditions.rs  lib.rs  lookups.rs  quality_map.rs
ffxiv-crafting/src/actions/: buffs.rs  collection.rs  errors.rs  failure.rs  misc.rs  mod.rs  progress.rs  quality.rs
ffxiv-crafting/src/actions/tests/: buffs.rs  complex.rs  misc.rs  mod.rs  progress.rs  quality.rs
ffxiv-crafting/src/buffs/: combo.rs  durability.rs  misc.rs  mod.rs  progress.rs  quality.rs  tests.rs
ffxiv-crafting/src/conditions/: mod.rs  tables.rs  tests.rs
ffxiv-crafting/src/conditions/tests/: mod.rs  no_qa.rs  qa.rs  relic_conds.rs  resto_conds.rs
ffxiv-crafting/src/recipe/: mod.rs  tables.rs
ffxiv-table-parser/: Cargo.toml
ffxiv-table-parser/src/: lib.rs  recipe.rs  records.rs  table_reader.rs
ffxiv-table-parser/src/raw_records/: collectables.rs  mod.rs
structured-rewards/: Cargo.toml
structured-rewards/src/: legacy.rs  lib.rs  rewards.rs  sem.rs
structured-rewards/src/simple_solvers/: mod.rs  test.rs
structured-rewards/src/simple_solvers/environments/: actions.rs  convergence.rs  mod.rs  test.rs  traits.rs
structured-rewards/src/solver/: mod.rs  test.rs
