[package]
name = "structured-rewards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derivative = { version = "2.2.0", optional = true }
strum = { version = "0.22", features = ["derive"], optional = true }

[features]
default = []
solvers = []
environments = ["solvers", "derivative", "strum"]
all = ["solvers", "environments"]
