[package]
name = "ffxiv-crafting-derive"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
convert_case = { version = "0.4", default-features = false }
darling = "0.14"
